--- a/tnt-saga-payment-service/src/main/resources/application.yml
+++ b/tnt-saga-payment-service/src/main/resources/application.yml
@@ -12,4 +12,13 @@ spring:
     show-sql: true
     generate-ddl: true
 
+  cloud:
+    stream:
+      function:
+        definition : paymentProcessor
+      bindings:
+        paymentProcessor-in-0 :
+          destination: order-event
+        paymentProcessor-out-0:
+          destination: payment-event
 
